version/0.1/_sources/api/ansys/tools/visualization_interface/backends/pyvista/pyvista/PyVistaBackend.rst.txt


:class:`PyVistaBackend`
=======================

.. py:class:: ansys.tools.visualization_interface.backends.pyvista.pyvista.PyVistaBackend(use_trame: beartype.typing.Optional[bool] = None, allow_picking: beartype.typing.Optional[bool] = False)

   Bases: :py:obj:`PyVistaBackendInterface`


   
   Provides the generic plotter implementation for PyAnsys libraries.

   This class accepts ``MeshObjectPlot``, ``pv.MultiBlock`` and ``pv.PolyData`` objects.

   :Parameters:

       **use_trame** : :ref:`bool <python:bltin-boolean-values>`, default: :data:`python:None`
           Whether to enable the use of `trame <https://kitware.github.io/trame/index.html>`_.
           The default is ``None``, in which case the ``USE_TRAME`` global setting
           is used.

       **allow_picking: bool, default: False**
           Whether to enable the picking capabilities in the PyVista plotter.














   ..
       !! processed by numpydoc !!


.. py:currentmodule:: PyVistaBackend

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~plot_iter`
            - Plot the elements of an iterable of any type of object to the scene.
          * - :py:attr:`~plot`
            - Plot a ``pyansys`` or ``PyVista`` object to the plotter.
          * - :py:attr:`~show`
            - Show the rendered scene.








Import detail
-------------

.. code-block:: python

    from ansys.tools.visualization_interface.backends.pyvista.pyvista import PyVistaBackend



    

Method detail
-------------
.. py:method:: plot_iter(plotting_list: beartype.typing.List[beartype.typing.Any], filter: str = None, **plotting_options) -> None

   
   Plot the elements of an iterable of any type of object to the scene.

   The types of objects supported are ``Body``, ``Component``, ``List[pv.PolyData]``,
   ``pv.MultiBlock``, and ``Sketch``.

   :Parameters:

       **plotting_list** : :obj:`List`\[:obj:`Any`]
           List of objects to plot.

       **filter** : :class:`python:str`, default: :data:`python:None`
           Regular expression with the desired name or names to include in the plotter.

       **\*\*plotting_options** : :class:`python:dict`, default: :data:`python:None`
           Keyword arguments. For allowable keyword arguments, see the
           :meth:`Plotter.add_mesh <pyvista.Plotter.add_mesh>` method.














   ..
       !! processed by numpydoc !!

.. py:method:: plot(object: beartype.typing.Any, filter: str = None, **plotting_options)

   
   Plot a ``pyansys`` or ``PyVista`` object to the plotter.


   :Parameters:

       **object** : :obj:`Any`
           Object to add.

       **filter** : :class:`python:str`
           Regular expression with the desired name or names to include in the plotter.

       **\*\*plotting_options** : :class:`python:dict`, default: :data:`python:None`
           Keyword arguments. For allowable keyword arguments, see the
           :meth:`Plotter.add_mesh <pyvista.Plotter.add_mesh>` method.














   ..
       !! processed by numpydoc !!

.. py:method:: show()

   
   Show the rendered scene.
















   ..
       !! processed by numpydoc !!


